--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ helix-importer-ui
 .DS_Store
 *.bak
 .idea
+
+# Dependency directories (ignore anywhere in the repo)
+node_modules/
+**/node_modules/
+
+# Lock files
+package-lock.json
+**/package-lock.json
